[package]
name = "check-net-traffic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systemstat = "0.1.10"
interfaces = "0.0.8"
clap = "3.1.6"
lettre = "0.10.0-rc.4"
once_cell = "1.10.0"
toml = "0.5.8"
bytesize = "1.1.0"
libc = "0.2.121"
duct = "0.13.5"
